--- a/BookStore.Site/BookStore.Site.csproj
+++ b/BookStore.Site/BookStore.Site.csproj
@@ -137,6 +137,8 @@
     <Compile Include="Models\EFModels\AppDbContext.cs" />
     <Compile Include="Models\EFModels\Member.cs" />
     <Compile Include="Models\Infrastructures\HashUtility.cs" />
+    <Compile Include="Models\Infrastructures\Repositories\MemberRepository.cs" />
+    <Compile Include="Models\Infrastructures\Services\IMemberRepository.cs" />
     <Compile Include="Models\ViewModels\RegisterVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
