--- a/BookStore.Site/BookStore.Site.csproj
+++ b/BookStore.Site/BookStore.Site.csproj
@@ -182,6 +182,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Members\Register.cshtml" />
     <Content Include="Views\Members\RegisterConfirm.cshtml" />
+    <Content Include="Views\Members\ActiveRegister.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
